--- a/index.html
+++ b/index.html
@@ -1,18 +1,62 @@
-<HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>
-Eli's Git Log of Gittiness
-</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Eli's Git Log of Gittiness.</title>
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
-<TR>
-<TD ALIGN = "center">
-Hello, and welcome to Eli's Git Log of Gittiness!
-I will regularly update this log with stuff about my projects.
-</TD>
-</TR>
-</TABLE>
+<div id="wrapper">
+  <div id="content">
+    <div id="header">
+      <div id="logo">
+        <h1>EGLOG</h1>
+        <h4>A Place of Random Tech.®</h4>
+      </div>
+      <div id="links">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="https://github.com/EtherTyper/">My GitHub</a></li>
+          <li><a href="#">Technology</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="mainimg">
+      <h3>Ideas and Implementations</h3>
+      <h4>For the new system.</h4>
+    </div>
+    <div id="contentarea">
+      <div id="leftbar">
+        <h2>Hello GitHub!</h2>
+        <p>This is a place to share ideas about anything! Need help on an Internet based project? Want to make a Minecraft mod? Design a cryptocurrency? Do them all in one? You've came to the right place, kind sir or lady. This is a place for free technological, creative, and logical thinking. Feel welcome on my site, send me a pull request, and I'll gladly consider your ideas!</p>
+        <br />
+        <!--
+        <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
+        <br />
+        <a href="#">more ></a><br />
+        <br />
+        !-->
+      </div>
+      <div id="rightbar">
+        <h2>latest news</h2>
+        <!--
+        <p><span class="orangetext">12/08/2006</span><br />
+          <br />
+          <span class="orangetext">10/08/2006</span><br />
+          <br />
+          <span class="orangetext">28/07/2006</span><br />
+	      </div>
+	    </p>
+	    !-->
+    </div>
+    <div id="bottom">
+      <div id="email">Template credit <a href="http://www.oswd.org/user/profile/id/11103/">sdworkz</a></div>
+      <div id="validtext">
+        <p>Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a></p>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
-</HTML>
+</html>
