--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div id="header">
       <div id="logo">
         <h1>EGLOG</h1>
-        <h4>A Place of Random Tech.®</h4>
+        <h4>A Place of Random Tech. TM</h4>
       </div>
       <div id="links">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="https://github.com/EtherTyper/">My GitHub</a></li>
-          <li><a href="#">Technology</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="https://gitter.im/EtherTyper/www">My Gitter</a></li>
+          <li><a href="mailto:elijos03@gmail.com">Contact us</a></li>
         </ul>
       </div>
     </div>
