Closed <div> tag

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	      </div>
 	    </p>
 	    !-->
+	    </div>
     </div>
     <div id="bottom">
       <div id="email">Template credit <a href="http://www.oswd.org/user/profile/id/11103/">sdworkz</a></div>
