--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="https://github.com/EtherTyper/">My GitHub</a></li>
           <li><a href="https://gitter.im/EtherTyper/www">My Gitter</a></li>
           <li><a href="mailto:elijos03@gmail.com">Contact us</a></li>
+          <li><a href="Blog/">Blog</a></li>
         </ul>
       </div>
     </div>
