Fixed Capitalization Error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="mainimg">
       <h3>Ideas and Implementations</h3>
-      <h4>For the new system.</h4>
+      <h4>For the New System</h4>
     </div>
     <div id="contentarea">
       <div id="leftbar">
