--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <h2>Hello GitHub!</h2>
         <p>This is a place to share ideas about anything! Need help on an Internet based project? Want to make a Minecraft mod? Design a cryptocurrency? Do them all in one? You've came to the right place, kind sir or lady. This is a place for free technological, creative, and logical thinking. Feel welcome on my site, send me a pull request, and I'll gladly consider your ideas!</p>
         <br />
+        <h2>I made a Spoon-Knife!</h2>
+        <p>Like any good GitHubber, I've got into the spirit of the holidays by making a Spoon-Knife, hosted by GitHub Pages. You can see it here: 
+        <a href="sk.ethertyper.com">Spoon Knife</a>
+        </p>
+        <br />
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
         <br />
