--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <br />
         <h2>I made a Spoon-Knife!</h2>
         <p>Like any good GitHubber, I've got into the spirit of the holidays by making a Spoon-Knife, hosted by GitHub Pages. You can see it here: 
-        <a href="sk.ethertyper.com">Spoon Knife</a>
+        <a href="http://sk.ethertyper.com">Spoon Knife</a>
         </p>
         <br />
         <!--
