THE CHRISTMAS COMMIT
# THE CHRISTMAS COMMIT

In celebration of Jesus's birth, I have made a new commit to www!

This commit marks a few actually important things:
* The officiality of [my Gitter chat
box](http://gitter.im/ethertyper/www) for submitting ideas.
* The beginnings of my tutorial oriented GitBook, [www: A Tale of
Adventures in The New Age](http://ethertyper.gitbooks.io/www/content/).

Before I go on, I just want to remind every one that this isn't a
reference build. But anyways, you can read all about that in the
README.md file. I'll continue once you're done.

What you can also get from this commit is a sense of spirit with my
newly designed theme,
[style.css](http://github.ethertyper.com/style.css)! I changed a couple
of numbers to make it all red and green and it looks way more
Christmas-y! In the new GitBook's cover, CentObuntu is wearing a
Christmas hat to celebrate as well!

For more info about that, as well as visuals, I post about my changes
at [/ or [root]](github.ethertyper.com).

Moving on, not much has changed but a bunch of Christmas jokes and
theming to every aspect of the site:
* A surprise post to the long deprecated
[/Classic/](github.ethertyper.com/Classic/).
* A festive 404.html with Candy Canes instead of Lollipops.

Anyways, that's the Christmas build for ya! I hope you like it!

:gift::christmas_tree::gift:
Thanks,
Eli

--- a/404.html
+++ b/404.html
@@ -10,11 +10,11 @@ permalink: /404.html
 <body style="margin: 0">
 <h1>
 <center>
-This is awkward. I couldn't find your content, so have a Lollipop instead.
+This is awkward. I couldn't find your content, so have a Candy Cane instead.
 </center>
 </h1>
-<a href="http://www.amazon.com/gp/product/B000X3TPHS/ref=s9_al_bw_g325_i5">
-<img src="https://www.android.com/static/img/banners/lollipop-1600.jpg" style="width:100%"/>
+<a href="http://www.amazon.com/Peppermint-Candy-Canes-3-18-boxes/dp/B00IEGNPTA/ref=sr_1_1?s=grocery&ie=UTF8&qid=1450729005&sr=1-1&keywords=candy+canes">
+<img src="Candy-Cane-Classic.jpg" style="width:100%"/>
 </a>
 </iframe>
 </body>
