--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <a href="http://sk.ethertyper.com">Spoon Knife</a>
         </p>
         <br />
+        <h2>Christmas Spirit!</h2>
+        <p>I've personally got into the Christmas spirit by completely redeveloping my blog! style.css is so much more Christmas-y, my Gitter chat box is officially a part of the repo, and of course my GitBook has arrived! It's not much; it's just one chapter about the struggles of [pre-git] code sharing, but I will fill it up with details about how I made www, [the new one], and how you can yourself. It will document all kinds of hands on experiences, ranging from forking the Spoon-Knife to implementing Dogecoin in Minecraft. I really hope you like it! It will be hosted in this same repository, viewable 
+        <a href="ethertyper.gitbooks.io/www/content/">
+        here!
+        </a>
+        I really hope you like it, and have a Merry Christmas! [Full details on the Christmas Commit are available under the commits section on GitHub, accessible by the "Fork button" in the top right corner. Enjoy!
+        </p>
+        <br />
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
         <br />
