--- a/Classic/index.html
+++ b/Classic/index.html
@@ -13,6 +13,13 @@ I will regularly update this log with stuff about my projects.
 </TD>
 </TR>
 </TABLE>
+<TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
+<TR>
+<TD ALIGN = "center">
+IT'S CHRISTMAS!!!!!!!!!!!!!!!!!
+</TD>
+</TR>
+</TABLE>
 </div>
 </body>
 </HTML>
