--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <p>This is a place to share ideas about anything! Need help on an Internet based project? Want to make a Minecraft mod? Design a cryptocurrency? Do them all in one? You've came to the right place, kind sir or lady. This is a place for free technological, creative, and logical thinking. Feel welcome on my site, send me a pull request, and I'll gladly consider your ideas!</p>
         <br />
         <h2>I made a Spoon-Knife!</h2>
-        <p>Like any good GitHubber, I've got into the spirit of the holidays by making a Spoon-Knife, hosted by GitHub Pages. You can see it here: 
+        <p>Like any good GitHubber, I've got into the spirit of the holidays by making a Spoon-Knife, hosted by GitHub Pages. You can see it here:
         <a href="http://sk.ethertyper.com">Spoon Knife</a>
         </p>
         <br />
         <h2>Christmas Spirit!</h2>
-        <p>I've personally got into the Christmas spirit by completely redeveloping my blog! style.css is so much more Christmas-y, my Gitter chat box is officially a part of the repo, and of course my GitBook has arrived! It's not much; it's just one chapter about the struggles of [pre-git] code sharing, but I will fill it up with details about how I made www, [the new one], and how you can yourself. It will document all kinds of hands on experiences, ranging from forking the Spoon-Knife to implementing Dogecoin in Minecraft. I really hope you like it! It will be hosted in this same repository, viewable 
+        <p>I've personally got into the Christmas spirit by completely redeveloping my blog! style.css is so much more Christmas-y, my Gitter chat box is officially a part of the repo, and of course my GitBook has arrived! It's not much; it's just one chapter about the struggles of [pre-git] code sharing, but I will fill it up with details about how I made www, [the new one], and how you can yourself. It will document all kinds of hands on experiences, ranging from forking the Spoon-Knife to implementing Dogecoin in Minecraft. I really hope you like it! It will be hosted in this same repository, viewable
         <a href="ethertyper.gitbooks.io/www/content/">
         here!
         </a>
         I really hope you like it, and have a Merry Christmas! [Full details on the Christmas Commit are available under the commits section on GitHub, accessible by the "Fork button" in the top right corner. Enjoy!
         </p>
+        <br />
+        <h2>TEXAS!</h2>
+        <p>Texas is amazing. That's why I made a .geojson representation of it, as shown below.</p>
+        <div>
+        <script src="https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson"></script>
+        </div>
         <br />
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
