Fix Christmas commit viewing instructions
# More articulate, & more accurate

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <a href="ethertyper.gitbooks.io/www/content/">
         here!
         </a>
-        I really hope you like it, and have a Merry Christmas! [Full details on the Christmas Commit are available under the commits section on GitHub, accessible by the "Fork button" in the top right corner. Enjoy!
+        I really hope you like it, and have a Merry Christmas! [Full details on the Christmas Commit are available under the commits section on GitHub, accessible by the "Fork me on github" button in the top left corner. Enjoy!
         </p>
         <br />
         <h2>TEXAS!</h2>
