--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         </p>
         <br />
         <h2>TEXAS!</h2>
-        <p>Texas is amazing. That's why I made a .geojson representation of it, as shown below.</p>
-        <div>
+        <p>Texas is amazing. That's why I made a .geojson representation of it, as shown below. It's hosted on the same repo as this blog here, so you can grab it by clicking the "Fork me on Github" button and then "Download ZIP". Once you extract the directory, these wonderful 328 lines of code are yours to keep, subject to the MIT License. Enjoy!</p>
+        <br />
+        <p>
         <script src="https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson"></script>
-        </div>
+        </p>
         <br />
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
