Fix up css, add OCTOWISDOM post, picture

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <script src="https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson"></script>
         </p>
         <br />
+        <h2>Octowisdom</h2>
+        <p>I've already learned git, some basic concepts in popular languages, and gathered a few other skills. But what do you do if you can't access your hard earned work? If your work runs on GitHub, you need to know the GitHub API.</p>
+        <br />
+        <p>The API has many functions, but among others two really stand out. Octocatsay and zen are the most essential, core, and useless skills you can know when you're using GitHub. So, I decided to do a little bit of a joke program based on these functions, called Octowisdom, which pipes the zen function into octocatsay using python's string parsing ability. You can see the source and its product below, when I set it to run in my .bash_profile.</p>
+        <br />
+        <script src="https://gist.github.com/EtherTyper/fc79310139d1a118c3ff.js"></script>
+        <p>
+        <img src="Octowisdom.png" />
+        </p>
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
         <br />
@@ -71,16 +80,16 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         !-->
       </div>
       <div id="rightbar">
-        <h2>latest news</h2>
         <!--
+        <h2>latest news</h2>
         <p><span class="orangetext">12/08/2006</span><br />
           <br />
           <span class="orangetext">10/08/2006</span><br />
           <br />
           <span class="orangetext">28/07/2006</span><br />
 	      </div>
+        !-->
 	    </p>
-	    !-->
 	    </div>
     </div>
     <div id="bottom">
