Removed gist/ Linked gist

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <br />
         <p>The API has many functions, but among others two really stand out. Octocatsay and zen are the most essential, core, and useless skills you can know when you're using GitHub. So, I decided to do a little bit of a joke program based on these functions, called Octowisdom, which pipes the zen function into octocatsay using python's string parsing ability. You can see the source and its product below, when I set it to run in my .bash_profile.</p>
         <br />
-        <script src="https://gist.github.com/EtherTyper/fc79310139d1a118c3ff.js"></script>
         <p>
+        <a href="https://tinyurl.com/Octowisdom">
         <img src="Octowisdom.png" />
+        </a>
         </p>
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
