Redirect to content

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <br />
         <p>The API has many functions, but among others two really stand out. Octocatsay and zen are the most essential, core, and useless skills you can know when you're using GitHub. So, I decided to do a little bit of a joke program based on these functions, called Octowisdom, which pipes the zen function into octocatsay using python's string parsing ability. You can see the source and its product below, when I set it to run in my .bash_profile. I almost need Octocat's advice when coding today!</p>
         <p>UPDATE: Instructions on installation and compiling are available in
-        <a href="https://ethertyper.gitbooks.io/www">my GitBook.</a>
+        <a href="https://ethertyper.gitbooks.io/www/content/">my GitBook.</a>
         </p>
         <br />
         <p>
