--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@ document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[
         <img src="Octowisdom.png" />
         </a>
         </p>
+        <br />
+        <h2>Autogenerator test</h2>
+        <p>Let's face the facts. In my first post on this site, I said it would provide a method to the freedom to share to technology, but it hasn't been much of that so far. The interface on my website is fairly outdated, and "sdworkz" most likely didn't intend his/her template to be used in the ways I use it for, e.g. using hyperlinks, embedding gists and geojson renderings, showing centered images, etc. Luckily, GitHub Pages offers a service for dynamic site generation from Markdown, and <em>many</em> themes are now available. I created a test site, EtherTyper/autogenerator_test, and wanted to know what you thought of it. Click on the image below to vote on whether the one-click test or my manual site looks better to you. I can't wait to see what you think!</p>
+        <br />
+        <a href="https://github.com/EtherTyper/www/issues/3">
+        <img width="644" alt="autogenerator" src="https://cloud.githubusercontent.com/assets/16024539/12072798/dc159c7a-b0b9-11e5-8b0f-fa1cbc6537ec.png" />
+        </a>
+        <br />
         <!--
         <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
         <br />
