--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Eli's Git Log of Gittiness.</title>
+<title>Eli's Git Log of Gittiness</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
