--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Eli's Git Log of Gittiness</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
+<meta name="theme-color" content="#33ff33">
 </head>
 <body>
 <script>
