--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<meta name="theme-color" content="#33ff33" />
 		<title>Eli's Git Log of Gittiness</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css" />
-		<meta name="theme-color" content="#33ff33" />
+		<link rel="icon" sizes="192x192" href="logo.png" />
 	</head>
 	<body>
 		<script>
