Remove \n in middle of icon link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta name="theme-color" content="#33ff33" />
 		<title>Eli's Git Log of Gittiness</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css" />
-		<link rel="icon" sizes="192x192" 
-href="logo.png" />
+		<link rel="icon" sizes="192x192" href="logo.png" />
 	</head>
 	<body>
 		<script>
