--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!-- Collaboration works! !-->
 <div class=" thing id-t3_3w1gz0 odd  link self" id="thing_t3_3w1gz0" onclick="click_thing(this)" data-fullname="t3_3w1gz0" data-type="link" data-cid="">
     <p class="parent"></p>
     <span class="rank"></span>
