--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div id="links">
 						<ul>
 							<li><a href="https://github.com/EtherTyper/">My GitHub</a></li>
-							<li><a href="https://gitter.im/EtherTyper/www">My Gitter</a></li>
+							<li><a href="https://gitter.im/debium/www">My Gitter</a></li>
 							<li><a href="mailto:elijos03@gmail.com">Contact us</a></li>
 							<li><a href="Blog/">Blog</a></li>
 						</ul>
