Add git.io URL for Octowisdom

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</p>
 						<br />
 						<p>
-							<a href="https://tinyurl.com/Octowisdom">
+							<a href="https://tinyurl.com/Octowisdom"> <!--https://git.io/vzcFs!-->
 							<img src="Octowisdom.png" />
 							</a>
 						</p>
