Fix BrowserCheck text body

--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
 				</a>
 				Hello GitHub!
 			</h2>
-			<p>
-				This is a place to share ideas about anything! Need help on an Internet based project? Want to make a Minecraft mod? Design a cryptocurrency? Do them all in one? You've came to the right place, kind sir or lady. This is a place for free technological, creative, and logical thinking. Feel welcome on my site, send me a pull request, and I'll gladly consider your ideas! Every creative thinker is welcome,
-				<div id="browser">
-					
-				</div>
+			<p id="browser">
+				This is a place to share ideas about anything! Need help on an Internet based project? Want to make a Minecraft mod? Design a cryptocurrency? Do them all in one? You've came to the right place, kind sir or lady. This is a place for free technological, creative, and logical thinking. Feel welcome on my site, send me a pull request, and I'll gladly consider your ideas! Every creative thinker is welcome here,
 			</p>
 			<h2>
 				<a id="i-made-a-spoon-knife" class="anchor" href="#i-made-a-spoon-knife" aria-hidden="true">
@@ -142,7 +139,7 @@
 			    M= M? [M[1], M[2]]: [N, navigator.appVersion,'-?'];
 			    return M;
 			}
-			document.getElementById("browser").innerHTML = ("Even users of "+BrowserCheck()[0]+" "+BrowserCheck()[1]+"!"); //returns name and number
+			document.getElementById("browser").innerHTML += (" even users of "+BrowserCheck()[0]+" "+BrowserCheck()[1]+"!"); //returns name and number
 		</script>
 		<a href="https://github.com/debium/www/fork"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png">
 		</a>
