Migrate special stuffs.
- Buttons
- Icon
- Android Theme

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
 		<meta charset="UTF-8">
 		<title>EGLOG by debium</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#33ff33" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+		<link rel="icon" sizes="192x192" href="logo.png" />
 	</head>
 	<body>
 		<section class="page-header">
 			<h1 class="project-name">EGLOG</h1>
-			<h2 class="project-tagline">A Place of Random Tech. TM</h2>
-			<a href="https://github.com/debium/www" class="btn">View on GitHub</a>
-			<a href="https://github.com/debium/www/zipball/master" class="btn">Download .zip</a>
-			<a href="https://github.com/debium/www/tarball/master" class="btn">Download .tar.gz</a>
+			<h2 class="project-tagline">A Place of Random Tech</h2>
+			<a href="https://github.com/EtherTyper/" class="btn">My GitHub </a>
+			<a href="https://gitter.im/debium/www" class="btn">My Gitter</a>
+			<a href="mailto:elijos03@gmail.com" class="btn">Contact Us</a>
+			<a href="Blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
 			<h2>
