--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta charset="UTF-8">
 		<title>EGLOG by debium</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#33ff33" />
+		<meta name="theme-color" content="#33ff33">
 		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-		<link rel="icon" sizes="192x192" href="logo.png" />
+		<link rel="icon" sizes="192x192" href="logo.png">
 	</head>
 	<body>
 		<section class="page-header">
