Migrate images to dedicated directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-		<link rel="icon" sizes="192x192" href="logo.png">
+		<link rel="icon" sizes="192x192" href="/images/logo.png">
 	</head>
 	<body>
 		<section class="page-header">
@@ -46,7 +46,11 @@
 				</a>
 			</p>
 			<h2>
-				<a id="christmas-spirit" class="anchor" href="#christmas-spirit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Christmas Spirit!
+				<a id="christmas-spirit" class="anchor" href="#christmas-spirit" aria-hidden="true">
+					<span aria-hidden="true" class="octicon octicon-link">
+					</span>
+				</a>
+				Christmas Spirit!
 			</h2>
 			<p>
 				I've personally got into the Christmas spirit by completely redeveloping my blog! style.css is so much more Christmas-y, my Gitter chat box is officially a part of the repo, and of course my GitBook has arrived! It's not much; it's just one chapter about the struggles of [pre-git] code sharing, but I will fill it up with details about how I made www, [the new one], and how you can yourself. It will document all kinds of hands on experiences, ranging from forking the Spoon-Knife to implementing Dogecoin in Minecraft. I really hope you like it! It will be hosted in this same repository, viewable
@@ -64,7 +68,7 @@
 			</h2>
 			<div id="TEXAS">
 			<p>
-				Texas is amazing. That's why I made a .geojson representation of it, as shown 
+				Texas is amazing. That's why I made a .geojson representation of it, as shown
 				<a href="https://github.com/debium/www/blob/gh-pages/TEXAS.geojson">
 					here
 				</a>. It's hosted on the same repo as this blog here, so you can grab it by clicking the "Fork me on Github" button and then "Download ZIP". Once you extract the directory, these wonderful 328 lines of code are yours to keep, subject to the MIT License. Enjoy!
@@ -91,7 +95,7 @@
 			</p>
 			<p>
 				<a href="https://tinyurl.com/Octowisdom">
-					<img src="Octowisdom.png">
+					<img src="/images/Octowisdom.png">
 				</a>
 			</p>
 			<h2>
