--- a/403.html
+++ b/403.html
@@ -14,7 +14,7 @@ This is awkward. I can't let you see your content, so have a Candy Cane instead.
 </center>
 </h1>
 <a href="http://www.amazon.com/Peppermint-Candy-Canes-3-18-boxes/dp/B00IEGNPTA/ref=sr_1_1?s=grocery&ie=UTF8&qid=1450729005&sr=1-1&keywords=candy+canes">
-<img src="Candy-Cane-Classic.jpg" style="height:100%"/>
+<img src="/images/Candy-Cane-Classic.jpg" style="height:100%"/>
 </a>
 </iframe>
 </body>
