--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="https://github.com/EtherTyper/" class="btn">My GitHub </a>
 			<a href="https://gitter.im/debium/www" class="btn">My Gitter</a>
 			<a href="mailto:elijos03@gmail.com" class="btn">Contact Us</a>
-			<a href="Blog/" class="btn">Blog</a>
+			<a href="blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
 			<h2>
