--- a/post.html
+++ b/post.html
@@ -5,7 +5,7 @@ permalink: /posts
 ---
 
 <ul class="entries">
-	{% for post in paginator.posts %}
+	{% for post in site.posts %}
 	<li>
 		<a href="{{ post.url }}">
 			<h3>{{ post.title }}</h3>
