--- a/allposts.html
+++ b/allposts.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: All Posts
+title: EGLOG by debium
 ---
 
 <div id="home">
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a>
       {{post.content}}
     {% endfor %}
   </ul>
