--- a/404.html
+++ b/404.html
@@ -1,13 +1,7 @@
 ---
 permalink: /404.html
+layout: default
 ---
-<html>
-<head>
-<title>
-404
-</title>
-</head>
-<body style="margin: 0">
 <h1>
 <center>
 This is awkward. I couldn't find your content, so have a Candy Cane instead.
@@ -17,5 +11,3 @@ This is awkward. I couldn't find your content, so have a Candy Cane instead.
 <img src="/images/Candy-Cane-Classic.jpg" style="height:100%"/>
 </a>
 </iframe>
-</body>
-</html>
