--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ title: EGLOG by debium
   {% for post in site.posts %}
     {{post.content}}
   {% endfor %}
-  , whatever browser you use!
+  whatever browser you use!
 </div>
