--- a/404.html
+++ b/404.html
@@ -1,13 +1,5 @@
 ---
 permalink: /404.html
-layout: default
+layout: error
 ---
-<h1>
-<center>
-This is awkward. I couldn't find your content, so have a Candy Cane instead.
-</center>
-</h1>
-<a href="http://www.amazon.com/Peppermint-Candy-Canes-3-18-boxes/dp/B00IEGNPTA/ref=sr_1_1?s=grocery&ie=UTF8&qid=1450729005&sr=1-1&keywords=candy+canes">
-<img src="/images/Candy-Cane-Classic.jpg"/>
-</a>
-</iframe>
+I couldn't find your content
