--- a/_posts/index.html
+++ b/_posts/index.html
@@ -1,15 +1,10 @@
-<html>
-<head>
-<title>
-EWLOW
-</title>
-</head>
-<body style="margin: 0">
+---
+title: EWLOW
+---
+
 <iframe src="http://edublogs.eanesisd.net/eli8742022/" style="border: 0; width: 100%; height: 100%">
 Your browser doesn't support iFrames, apparently.
 <a href="http://edublogs.eanesisd.net/eli8742022/">
 Click Here.
 </a>
 </iframe>
-</body>
-</html>
