--- a/_posts/blog.html
+++ b/_posts/blog.html
@@ -1,5 +1,6 @@
 ---
 title: EWLOW
+permalink: /blog/
 ---
 
 <iframe src="http://edublogs.eanesisd.net/eli8742022/" style="border: 0; width: 100%; height: 100%">
